chore: add unknown words to workspace settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "lib/shared",
     "services/core-service",
     "web/app"
-  ]
+  ],
+  "cSpell.words": ["bodyparser", "datetime", "lcdev", "unixtime"]
 }
