--- a/web/app/package.json
+++ b/web/app/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "axios": "^0.27.2",
     "dotenv": "^16.0.0",
-    "time-in-timezone-shared": "*",
+    "fuse.js": "^6.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.1",
     "sweetalert2": "^11.4.4",
     "sweetalert2-react-content": "^4.2.0",
+    "time-in-timezone-shared": "*",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
