--- a/web/app/package.json
+++ b/web/app/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "axios": "^0.27.2",
+    "date-fns-tz": "^1.3.5",
     "dotenv": "^16.0.0",
     "fuse.js": "^6.6.2",
     "react": "^17.0.1",
